@@ -21,7 +21,7 @@
  * resulting executable, without including the source code for OpenSSL in the
  * source distribution.
  *
- * $Id: auth.c,v 1.17 2009-09-02 17:58:53 castaglia Exp $
+ * $Id: auth.c,v 1.18 2009-09-04 17:13:09 castaglia Exp $
  */
 
 #include "mod_sftp.h"
@@ -533,8 +533,6 @@ static int setup_env(pool *p, char *user) {
     PR_SCORE_USER, session.user,
     PR_SCORE_CWD, session.cwd,
     NULL);
-
-  pr_session_set_idle();
 
   pr_timer_remove(PR_TIMER_LOGIN, ANY_MODULE);
 
