@@ -24,7 +24,7 @@
  * DO NOT EDIT BELOW THIS LINE
  * $Archive: mod_sftp.a $
  * $Libraries: -lcrypto -lz $
- * $Id: mod_sftp.c,v 1.17 2009-08-28 16:20:42 castaglia Exp $
+ * $Id: mod_sftp.c,v 1.18 2009-09-04 17:13:09 castaglia Exp $
  */
 
 #include "mod_sftp.h"
@@ -130,6 +130,7 @@ static void sftp_cmd_loop(server_rec *s, conn_t *conn) {
   int res;
   const char *k, *v;
 
+  pr_session_set_protocol("ssh2");
   sftp_conn = conn;
 
   res = sftp_kex_send_first_kexinit();
@@ -1437,7 +1438,6 @@ static int sftp_sess_init(void) {
   /* Use our own "authenticated yet?" check. */
   set_auth_check(sftp_have_authenticated);
 
-  pr_session_set_protocol("ssh2");
   pr_cmd_set_handler(sftp_cmd_loop);
 
   /* Check for any UseEncoding directives.  Specifically, we're interested
