@@ -14,6 +14,12 @@ command displays the current status of FTP sessions in a continuously updating
 like format.
 .SH OPTIONS
 .TP 12
+.B \-A
+Filter the display to show sessions that are authenticating.
+.TP
+.B \-a
+Filter the display to hide sessions that are authenticating.
+.TP
 .B \-D
 Filter the display to show sessions that are downloading.
 .TP
