@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1060 2009-09-01 18:39:12 castaglia Exp $
+$Id: NEWS,v 1.1061 2009-09-04 17:13:09 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -36,6 +36,10 @@ CVS
   configuration.
 - Bug 3287 - MaxTransfersPerHost, MaxTransfersPerUser directives not supported
   properly.
+- Bug 2013 - Track RFC2228 sessions in scoreboard.  The scoreboard entry
+  format now has a 'protocol' field, for tracking 'ftp' and 'ftps'.
+- Bug 3286 - Client command field in scoreboard entry too short for SSH2/SFTP
+  commands.
 
 1.3.3rc1 - Released 30-Jun-2009
 --------------------------------
